# optimizely-rust-sdk

./: Cargo.toml  README.md  justfile
datafiles/: sandbox.json
examples/network-test/: Cargo.toml
examples/network-test/src/: main.rs
examples/performance-test/: Cargo.toml  README.md
examples/performance-test/src/: main.rs
examples/results-demo/: Cargo.toml
examples/results-demo/src/: main.rs
examples/web-server/: Cargo.toml
examples/web-server/src/: main.rs
optimizely/: Cargo.toml  README.md
optimizely/src/: client.rs  datafile.rs  decision.rs  error.rs  event_api.rs  lib.rs  types.rs
optimizely/src/client/: builder.rs  error.rs  initialization.rs  user.rs  user_attribute.rs  user_context.rs
optimizely/src/datafile/: attribute.rs  audience.rs  environment.rs  error.rs  event.rs  experiment.rs  feature_flag.rs  json.rs  revision.rs  rollout.rs  traffic_allocation.rs  variable_definition.rs  variation.rs
optimizely/src/datafile/attribute/: value.rs
optimizely/src/datafile/audience/: condition.rs  match_type.rs  operator.rs  value.rs
optimizely/src/error/: client_error.rs  datafile_error.rs
optimizely/src/event_api/: batched_event_dispatcher.rs  dispatcher.rs  request.rs  simple_event_dispatcher.rs
optimizely/src/event_api/dispatcher/: batched_event_dispatcher.rs  event_dispatcher.rs  simple_event_dispatcher.rs
optimizely/src/event_api/request/: attribute.rs  conversion_event.rs  decision.rs  decision_event.rs  event.rs  payload.rs  snapshot.rs  visitor.rs
optimizely/src/types/: attribute_value.rs  conversion.rs  decide_options.rs  decision.rs  user_attribute.rs  user_attribute_map.rs
optimizely/tests/: client_initialization.rs  decisions.rs  user_context.rs
optimizely/tests/common/: mod.rs
optimizely_proc_macro/: Cargo.toml
optimizely_proc_macro/examples/: example.rs
optimizely_proc_macro/src/: lib.rs
optimizely_proc_macro/tests/: integration_test.rs  proc_macro.rs
