[package]
name = "optimizely"
version = "0.4.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
thiserror = "2.0"
error-stack = "0.5"
murmur3 = "0.5.2"
log = "0.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.ureq]
version = "2.12"
optional = true

[dependencies.uuid]
version = "1.11"
features = ["v4", "fast-rng"]

[features]
online = ["dep:ureq"]
