[package]
name = "optimizely"
authors = ["Mark Biesheuvel <mark.biesheuvel@optimizely.com>"]
version = "0.6.0-dev"
edition = "2021"
rust-version = "1.83"
description = "An unofficial Rust SDK for Optimizely Feature Experimentation"
readme = "README.md"
repository = "https://github.com/MarkBiesheuvel/optimizely-rust-sdk"
documentation = "https://docs.rs/optimizely/"
license = "Apache-2.0"
keywords = [
    "optimizely",
    "experimentation",
    "feature-flagging"
]
exclude = [
    "/target",
    ".git",
    ".github",
    ".vscode",
]

[lints.rust]
unsafe_code = "forbid"

[dependencies]
serde_json = "^1.0"
thiserror = "^2.0"
error-stack = "^0.5"
murmur3 = "^0.5"
log = "^0.4"
semver = "^1.0"

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.ureq]
version = "^2.12"
optional = true

[dependencies.uuid]
version = "^1.11"
features = ["v4", "fast-rng"]

[features]
online = ["dep:ureq"]

[package.metadata.docs.rs]
all-features = true
