[package]
name = "results-demo"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "Example that generates a sample for the results dashboard"
repository = "https://github.com/MarkBiesheuvel/optimizely-rust-sdk/tree/main/examples/results-demo"

[dependencies]
rand = "0.8.5"

[dependencies.optimizely]
path = "../../optimizely"
features = ["online"]

[dependencies.uuid]
version = "1.3.0"
features = ["v4", "fast-rng"]