[package]
name = "web-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "^0.8"

[dependencies.tokio]
version = "^1.44"
features = ["full"]

[dependencies.uuid]
version = "^1.3"
features = ["v4", "fast-rng"]

[dependencies.optimizely]
path = "../../optimizely"
features = ["online"]
