[package]
name = "web-server"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "Example of a web server using Optimizely"
repository = "https://github.com/MarkBiesheuvel/optimizely-rust-sdk/tree/main/examples/web-server"

[dependencies]
env_logger = "^0.10"
log = "^0.4"
axum = "^0.8"

[dependencies.tokio]
version = "^1.44"
features = ["full"]

[dependencies.uuid]
version = "^1.3"
features = ["v4", "fast-rng"]

[dependencies.optimizely]
path = "../../optimizely"
features = ["online"]
